# Oth

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.cpp  othello.cpp
include/: board.h  board.hpp  const.h  const.hpp  game.h  game.hpp  heuristic.hpp  player.hpp
src/: board.cpp  game.cpp  heuristic.cpp  othello.cpp  player.cpp
